--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -11,7 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-} 
+}
 
 .jumbotron {
   text-align: center;
@@ -44,23 +44,20 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  /* color: white; */
   color: black;
 }
 
 .present {
   background-color: #ff6961;
-  /* color: white; */
   color: black;
 }
 
 .future {
   background-color: #77dd77;
-  /* color: white; */
   color: black;
 }
 
-.saveBtn {  
+.saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
